Fix empty menu icon spacing

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -2027,6 +2027,10 @@ body:not(.is-mobile) .suggestion-container {
     }
   }
 
+  .menu-item-icon:empty {
+    display: none;
+  }
+
   .search-suggest-item.mod-group {
     margin: 0;
     padding: 4px 8px;
